<resources>
    <string name="app_name">ExerciserApplication</string>
    <string name="welcomeMessage">Welcome to \n The Exerciser </string>
    <string name="start">Start</string>
    <string name="title">Search for \n Exercises</string>
    <string name="search">Search</string>
    <string name="favorite">Favorites</string>
    <string name="or">Or</string>
    <string name="typePrompt">Exercise Type: </string>
    <string name="typePrompt2">Muscle to train: </string>
    <string name="typePrompt3">Difficulty: </string>
    <string name="nameLabel">Name: </string>
    <string name="typeLabel">Type: </string>
    <string name="muscleLabel">Muscle: </string>
    <string name="equipmentLabel">Equipment: </string>
    <string name="difficultyLabel">Difficulty: </string>
    <string name="instructionLabel">Instruction: </string>
    <string name="save">FAVORITE</string>
    <string name="delete">DELETE</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="favorites">Favorites</string>
    <string name="pick">Pick a mode for the background</string>
    <string name="night">Night Mode</string>
    <string name="light">Light Mode</string>
    <string name="apiInfoTitle">API Information:</string>
    <string name="api_Info">The Exercises API provides access to a comprehensive list of thousands
        of exercises targeting every major muscle group.</string>
    <string name="appInfoTitle">App Information:</string>
    <string name="app_Info">This app allows users, beginners or experts, who want to access exercise
        information that can guide them through their fitness journey. Users are able to access
        information about various exercises that fit their needs using the three dropdown search options.
        Users are also able to save exercises to their favorites by clicking on the favorite button in
        exercise details. Happy Exercising!</string>
    <string name="developerTitle">Developer Information:</string>
    <string name="developerInfo">The developers are Camryn Keller and Momoreoluwa Ayinde, both are students
        SER210 at Quinnipiac University. </string>


    <string-array name="type_array">
        <item>No selection</item>
        <item>cardio</item>
        <item>olympic_weightlifting</item>
        <item>plyometrics</item>
        <item>powerlifting</item>
        <item>strength</item>
        <item>stretching</item>
        <item>strongman</item>
    </string-array>


    <string-array name="type_array2">
        <item>No selection</item>
        <item>abdominals</item>
        <item>abductors</item>
        <item>abductors</item>
        <item>biceps</item>
        <item>calves</item>
        <item>chest</item>
        <item>forearms</item>
        <item>glutes</item>
        <item>hamstrings</item>
        <item>lats</item>
        <item>lower_back</item>
        <item>middle_back</item>
        <item>neck</item>
        <item>quadriceps</item>
        <item>traps</item>
        <item>triceps</item>
    </string-array>

    <string-array name="type_array3">
        <item>No selection</item>
        <item>beginner</item>
        <item>intermediate</item>
        <item>expert</item>
    </string-array>


</resources>